--- a/app/src/main/res/layout/fragment_recipe_list.xml
+++ b/app/src/main/res/layout/fragment_recipe_list.xml
@@ -3,25 +3,19 @@
     android:id="@+id/recipeListFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="layout.RecipeList">
+    tools:context="layout.RecipeListFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <LinearLayout
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recipeListRecycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-    <Button
-        android:id="@+id/recipeListButton"
-        android:layout_gravity="center"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:text="@string/hello_blank_fragment"
-        android:background="#DFA785"
-        android:layout_marginTop="30dp"
-        style="@style/TextAppearance.AppCompat.Widget.Button"
-        />
+        android:layout_height="wrap_content"
+
+        android:layout_marginLeft="20dp"
+
+        android:orientation="horizontal" />
 
 
-
-    </LinearLayout>
 </FrameLayout>
