--- a/app/src/main/res/layout/fragment_recipe_list.xml
+++ b/app/src/main/res/layout/fragment_recipe_list.xml
@@ -2,8 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/recipeListFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="layout.RecipeListFragment">
+    android:layout_height="wrap_content"
+    tools:context="layout.RecipeListFragment"
+    android:layout_gravity="center">
 
     <!-- TODO: Update blank fragment layout -->
 
