--- a/app/src/main/res/layout-sw600dp/recipe_list_item.xml
+++ b/app/src/main/res/layout-sw600dp/recipe_list_item.xml
@@ -3,12 +3,12 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
-    android:layout_marginBottom="10dp"
-    android:layout_gravity="center">
+    android:layout_marginBottom="10dp">
 
     <Button
         android:id="@+id/recipeListButton"
-        android:layout_width="match_parent"
+
+        android:layout_width="250dp"
         android:layout_height="80dp"
         android:text="test string"
         android:background="#DFA785"
