--- a/app/src/main/res/layout-sw600dp/fragment_recipe_list.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_recipe_list.xml
@@ -4,12 +4,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="wrap_content" android:layout_width="match_parent"
         android:orientation="horizontal"
         android:id="@+id/fragmentContainerTablet"
-        android:scaleType="centerInside"
-    >
+        android:scaleType="centerInside">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recipeListRecycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="55dp"
         android:orientation="horizontal" />
-    </FrameLayout>
+</FrameLayout>
