Nested ArrayList issue fixed

--- a/app/src/main/res/layout/activity_recipe_steps.xml
+++ b/app/src/main/res/layout/activity_recipe_steps.xml
@@ -5,8 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.ravikiranpathade.bakingapp.RecipeStepsActivity">
-<TextView android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
-    android:id="@+id/testText"
-    android:text="Sample Text"/>
+
+    <FrameLayout android:id="@+id/stepsFragmentContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scaleType="centerInside"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="8dp" />
+
 </android.support.constraint.ConstraintLayout>
