--- a/app/src/main/res/layout/recipe_list_item.xml
+++ b/app/src/main/res/layout/recipe_list_item.xml
@@ -5,6 +5,10 @@
     android:layout_marginTop="10dp"
     android:layout_marginBottom="10dp"
     android:layout_gravity="center">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
     <Button
         android:id="@+id/recipeListButton"
@@ -15,5 +19,5 @@
         android:layout_marginTop="10dp"
         style="@style/TextAppearance.AppCompat.Widget.Button"
         />
-
+    </LinearLayout>
 </FrameLayout>
