--- a/app/src/main/res/layout/fragment_step_detail.xml
+++ b/app/src/main/res/layout/fragment_step_detail.xml
@@ -8,7 +8,8 @@
         android:id="@+id/stepDetailRecycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical" />
+        android:orientation="vertical"
+        android:layout_marginBottom="50dp"/>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/db1_root"
@@ -37,7 +38,7 @@
                 android:id="@+id/previous"
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_gravity="bottom|end"
                 android:layout_weight="0.51"
                 android:background="@color/colorPrimary"
@@ -50,7 +51,7 @@
                 android:layout_marginLeft="10dp"
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_gravity="start|bottom"
                 android:layout_weight="0.51"
                 android:background="@color/colorPrimary"
