--- a/app/src/main/res/layout-land/fragment_step_detail.xml
+++ b/app/src/main/res/layout-land/fragment_step_detail.xml
@@ -1,5 +1,7 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/stepDetailLandscape"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="layout.StepDetailFragment">
@@ -9,22 +11,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
-        android:orientation="vertical" />
+        android:orientation="vertical"
+        app:resize_mode="fit"/>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/db1_root"
+        android:id="@+id/linearRecipeStepDetail"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <LinearLayout
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.02"
             android:gravity="center|bottom"
             android:orientation="horizontal"
-            android:weightSum="1"
-            >
+
+            android:weightSum="1">
 
             <Button
                 android:id="@+id/previous"
@@ -52,4 +58,4 @@
                 />
         </LinearLayout>
     </LinearLayout>
-</FrameLayout>
+</android.support.constraint.ConstraintLayout>
