Tablet Mode Implemented -- TODO Highlight Selected Step

--- a/app/src/main/res/layout/fragment_recipe_step.xml
+++ b/app/src/main/res/layout/fragment_recipe_step.xml
@@ -13,7 +13,7 @@
         android:id="@+id/stepsListRecycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:focusable="true"
         android:orientation="vertical" />
     </LinearLayout>
 </FrameLayout>
