--- a/app/src/main/res/layout/ingredients_list.xml
+++ b/app/src/main/res/layout/ingredients_list.xml
@@ -13,7 +13,8 @@
         android:background="#09C"
         android:textColor="#ffffff"
         android:textSize="20dp"
-        android:textStyle="bold|italic" />
+        android:textStyle="bold|italic"
+        android:text="No Recipes Selected"/>
     <ListView
         android:id="@+id/list_all_ingredients_view"
         android:layout_width="match_parent"
