--- a/app/src/main/res/layout/fragment_recipe_list.xml
+++ b/app/src/main/res/layout/fragment_recipe_list.xml
@@ -5,6 +5,15 @@
     android:layout_height="wrap_content"
     tools:context="layout.RecipeListFragment"
     android:layout_gravity="center">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/noInternet"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:text="No Internet Connection"
+        android:textColor="@color/colorAccent"
+        android:textSize="40dp"
+        android:visibility="gone"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recipeListRecycler"
