--- a/app/src/main/res/layout/fragment_step_detail.xml
+++ b/app/src/main/res/layout/fragment_step_detail.xml
@@ -3,7 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="layout.StepDetailFragment">
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/noInternetStepDetail"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:text="No Internet Connection . Please try after sometime."
+        android:textColor="@color/colorAccent"
+        android:textSize="40dp"
+        android:visibility="gone"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/stepDetailRecycler"
         android:layout_width="match_parent"
@@ -16,6 +24,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
+
 
         <LinearLayout
             android:layout_width="match_parent"
