--- a/app/src/main/res/layout-land/step_detail_item.xml
+++ b/app/src/main/res/layout-land/step_detail_item.xml
@@ -1,18 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/stepDetailItemLandscape">
+    android:id="@+id/stepDetailItemLandscape"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
     <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+        android:id="@+id/exoPlayer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:resize_mode="fit"
-        android:id="@+id/exoPlayer"/>
+        android:visibility="gone"
+        app:resize_mode="fit" />
+
+    <ImageView
+        android:id="@+id/exoPlayerThumbnail"
+        android:layout_width="match_parent"
+        android:layout_height="240dp"
+        android:background="#000"
+        android:src="@drawable/ic_play_circle_filled_white_24dp"
+        android:visibility="gone"
+
+        />
+
     <TextView
         android:id="@+id/step_description"
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:visibility="gone"/>
+        android:visibility="gone" />
 </android.support.constraint.ConstraintLayout>
