--- a/app/src/main/res/layout-sw600dp-land/step_detail_item.xml
+++ b/app/src/main/res/layout-sw600dp-land/step_detail_item.xml
@@ -8,8 +8,18 @@
     <com.google.android.exoplayer2.ui.SimpleExoPlayerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="gone"
         app:resize_mode="fit"
         android:id="@+id/exoPlayer"/>
+    <ImageView
+        android:id="@+id/exoPlayerThumbnail"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:background="#000"
+        android:src="@drawable/ic_play_circle_filled_white_24dp"
+        android:visibility="gone"
+
+        />
     <TextView
         android:id="@+id/step_description"
         android:layout_height="wrap_content"
