--- a/app/src/main/res/layout-sw600dp/recipe_list_item.xml
+++ b/app/src/main/res/layout-sw600dp/recipe_list_item.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
     android:layout_marginBottom="10dp">
 
+    <ImageButton
+        android:layout_width="50dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="10dp"
+        android:id="@+id/imageRecipe"
+        />
+
     <Button
         android:id="@+id/recipeListButton"
-        android:layout_width="250dp"
+        android:layout_width="220dp"
         android:layout_height="80dp"
         android:text="test string"
         android:background="#DFA785"
@@ -15,4 +22,5 @@
         style="@style/TextAppearance.AppCompat.Widget.Button"
         />
 
-</FrameLayout>
+
+</LinearLayout>
