--- a/app/src/main/res/layout/recipe_list_item.xml
+++ b/app/src/main/res/layout/recipe_list_item.xml
@@ -8,7 +8,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal">
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="10dp"
+            android:id="@+id/imageRecipe"
+            android:visibility="gone"
+            />
 
     <Button
         android:id="@+id/recipeListButton"
